# perplexity-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  FILES_SUMMARY.txt  INSTALL.md  QUICKSTART.md  README.md  pyproject.toml  setup.sh
.claude/: settings.json
.claude/skills/pharma-research/: SKILL.md  validate_skill.py
.claude/skills/pharma-research/references/: output-templates.md  query-strategies.md
docs/: BEST_PRACTICES_IMPLEMENTATION.md  CLAUDE_CODE_MCP.md  DOCS.md  GITHUB_PORTABILITY.md  INFRASTRUCTURE_FIXED.md  OUTPUT_EXAMPLES.md  OUTPUT_FORMAT.md  OUTPUT_FORMATS_ADDED.md  OUTPUT_SUMMARY.md  QUICKSTART.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  SESSION_SUMMARY_v2.0.1.md  SETUP_COMPLETE.md  SKILL_SETUP_COMPLETE.md  SKILL_SPEC.md  START_HERE.md  mcp_research.md  pharma_research_feedback.md  plan.md
docs/archive/: CLAUDE.md.pre-restructure-2025-11-23
docs/assets/: design.md
docs/guides/: DEVELOPER_GUIDE.md  PERPLEXITY_API_REFERENCE.md  PHARMA_RESEARCH.md  QUICKSTART.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/plan/: grok_statement.md  pharma_check.md  pharma_extension_plan.md  plan.md  plan_change_management.md
docs/tools/: mcp-servers.md  packages.md  skills.md
reports/: .gitignore  README.md
src/: __init__.py  perplexity_mcp.py  perplexity_mcp_server.py  prompt_enrichment.py
